# glob_stab

./: .gitignore  CMakeLists.txt  README.md  build_debug  build_release
doc/: Doxyfile.in  references.bib
examples/: glob_stab_fig.asy
examples/bernstein/: README  garloff1999ex1.chEq  garloff1999ex1.eq  garloff1999ex1.p  garloff2000ex2.eq  garloff2000ex2.p  garloff2000ex2_2d.eq  garloff2000ex2_2d.p  run.sh  run_boundaries_only.sh  run_eq.sh  zettler1998ex4-1d.chEq  zettler1998ex4-1d.p  zettler1998ex4.chEq  zettler1998ex4.p
examples/citybus/: .gitignore  README  husek2008_citybus.chEq  husek2008_citybus.p  husek2008_citybus.py  husek2008_citybus_noplot.p  husek2008_citybus_td.chEq  husek2008_citybus_td0.01.p  husek2008_citybus_td0.02.p  husek2008_citybus_td0.05.p  husek2008_citybus_td0.1.p  husek2008_citybus_td0.2.p  husek2008_citybus_td_v.p  run.sh  run_td.sh  run_td_boundary_only.sh
examples/crane/: README  crane.chEq  crane_2d1.p  crane_2d2.p  crane_2d3.p  crane_2d4.p  crane_2td.chEq  crane_2td1_4d.p  crane_2td2_4d.p  crane_2td3_4d.p  crane_4d.p  crane_td.chEq  crane_td1_2d2.p  crane_td1_4d.p  crane_td2_2d2.p  crane_td2_4d.p  crane_td3_2d2.p  crane_td3_4d.p  crane_td4_2d2.p  crane_td4_4d.p  run.sh  run_2td.sh  run_delta_01.sh  run_td.sh
examples/haag2009/: README  characteristic_eq.m  haag2009ex1.chEq  haag2009ex1.p  haag2009ex2.chEq  haag2009ex2.p  haag2009ex3.p  haag2009ex3_zoom.p  haag2009ex3_zoom2.chEq  haag2009ex3_zoom2.p  haag2009ex4.chEq  haag2009ex4.p  haag2009ex5.chEq  haag2009ex6.chEq  haag2009ex7.p  haag2009ex7_zoom.chEq  haag2009ex7_zoom.p  haag2009ex8.chEq  haag2009ex8.p  haag2009ex9.p  haag2009ex9_zoom.chEq  haag2009ex9_zoom.p  haag2009examples.m  run.sh
examples/lescher2011/: .gitignore  README  lescher2011ex1.chEq  lescher2011ex1.p  lescher2011ex1_zoom.p  lescher2011ex2.chEq  lescher2011ex2.p  lescher2011ex2_delta_max.chEq  lescher2011ex2_delta_max.p  lescher2011ex2_zoom.p  lescher2011examples.m  run_boundaries_only.sh
src/: CMakeLists.txt
src/glob_stab/: CMakeLists.txt  glob_stab.cpp
src/math/: CMakeLists.txt  bernstein.cpp  bernstein.h  bernstein_2d.cpp  bernstein_2d.h  bernstein_2d_patch.cpp  bernstein_2d_patch.h  bernstein_exponent.cpp  bernstein_exponent.h  iv.cpp  iv.h  iv_polygon.cpp  iv_polygon.h  iv_polygon_test.cpp  iv_sse2.cpp  iv_sse2.h  iv_sse2_rounding.hpp  iv_test.cpp  monomial.cpp  monomial.h  polygon.cpp  polygon.h  polygon_test.cpp  polynomial.cpp  polynomial.h  polynomial_test.cpp  taylor_model.cpp  taylor_model.h  taylor_model_test.cpp
src/optimization/: CMakeLists.txt  equation.cpp  equation.h  function.cpp  function.h  optimization.cpp  optimization.h  optimization_result.cpp  optimization_result.h  parameters.cpp  parameters.h  value_set.cpp  value_set.h
src/parser/: CMakeLists.txt  parse_equation.cpp  parse_equation.h  parse_identifier.cpp  parse_identifier.h  parse_parameter.cpp  parse_parameter.h
src/tools/: CMakeLists.txt  branch_and_bound.hpp  config.cpp  config.h  helpers.cpp  helpers.h  mat.hpp  nd_array.hpp  nd_array_test.cpp  thread_pool.hpp  vec.hpp
